implementacion de filtros, busquedas, editables